<resources>
    <string name="app_name">SpotiCloud</string>
    <string name="logo">logo</string>
    <string name="start_heading">Welcome to SpotiCloud</string>
    <string name="signin_soundcloud">Sign in with Soundcloud</string>
    <string name="signin_spotify">Sign in with Spotify</string>
    <string name="start_choice">OR\u002FAND</string>
    <string name="go_to_app">GO TO APP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="soundcloud_logo">Soundcloud logo</string>
    <string name="login_error">Wrong email or password</string>
    <string name="error">Something wrong with server or your internet connection</string>
    <string name="search">Search</string>
    <string name="my_tracks">My tracks</string>
    <string name="trends">Trends</string>
    <string name="settings">Settings</string>
    <string name="sort">Sort</string>
    <string name="track_cover">Track cover</string>
    <string name="empty_list">You have no favorite tracks yet :(</string>
    <string name="prev_track">previous track</string>
    <string name="play_or_pause">play/pause</string>
    <string name="next_track">next track</string>
    <string name="image_search">image search</string>
    <string name="search_header">Search for song from SoundCloud and Spotify</string>
    <string name="type_track_to_search">type track to search</string>
    <string name="tracks_not_found">Tracks not found</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="track_added_to_fav">Track added to favorites</string>
    <string name="music_channel_name">Music</string>
    <string name="music_channel_description">Notification for playing music</string>
    <string name="img_flame">Image flame</string>
    <string name="trends_header">TRENDS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now Playing</string>
    <string name="more">more</string>
</resources>
