<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.loginsoundcloud.SoundcloudLoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_login_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_black_36dp"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.04"
                app:layout_constraintHorizontal_bias="0.04"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_soundcloud"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.15"
                style="@style/SoundCloudLoginHeader"/>

        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.35">

            <ImageView
                    android:layout_width="@dimen/login_soundcloud_logo"
                    android:layout_height="@dimen/login_soundcloud_logo"
                    android:src="@drawable/soundcloudlogo"
                    android:contentDescription="@string/soundcloud_logo"/>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_login_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/gd_login_begin"
                app:layout_constraintEnd_toEndOf="@id/gd_login_end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.64"
                style="@style/EditText">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    style="@style/EditText"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_login_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/gd_login_begin"
                app:layout_constraintEnd_toEndOf="@id/gd_login_end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.77"
                style="@style/EditText">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    style="@style/EditText"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:id="@+id/tv_login_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.82"
                style="@style/SoundCloudLoginError"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login_signin"
                android:text="@string/sign_in"
                android:elevation="@dimen/elevation"
                app:cornerRadius="@dimen/startscreen_btns_radius"
                app:layout_constraintStart_toStartOf="@id/gd_login_begin"
                app:layout_constraintEnd_toEndOf="@id/gd_login_end"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.92"
                style="@style/LoginScreenButtons"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gd_login_begin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gd_login_end"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
            android:id="@+id/login_soundcloud_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"/>
</FrameLayout>