<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/footer_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorFooterBackground">

    <androidx.cardview.widget.CardView
            android:id="@+id/iv_footer_player_cover_container"
            android:layout_width="@dimen/footer_player_item_cover_size"
            android:layout_height="@dimen/footer_player_item_cover_size"
            android:elevation="@dimen/elevation"
            android:layout_marginStart="@dimen/rv_track_item_cover_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardCornerRadius="@dimen/track_list_cover_corner_radius">

        <ImageView
                android:id="@+id/iv_footer_player_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:contentDescription="@string/track_cover"/>
    </androidx.cardview.widget.CardView>

    <TextView
            android:id="@+id/tv_footer_player_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/footer_player_cover_padding"
            android:maxLines="2"
            android:maxWidth="@dimen/max_width"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_footer_player_cover_container"
            style="@style/FooterPlayerItemTitle"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_footer_player_actions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6"/>

    <ImageButton
            android:id="@+id/btn_footer_player_prev"
            android:layout_width="@dimen/footer_action"
            android:layout_height="@dimen/footer_action"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/selector_footer_prev"
            android:contentDescription="@string/prev_track"
            app:layout_constraintStart_toStartOf="@id/gd_footer_player_actions"
            app:layout_constraintEnd_toStartOf="@id/btn_footer_player_play_pause"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <ToggleButton
            android:id="@+id/btn_footer_player_play_pause"
            android:layout_width="@dimen/footer_action"
            android:layout_height="@dimen/footer_action"
            android:elevation="@dimen/elevation"
            android:textOn=""
            android:textOff=""
            android:background="@drawable/selector_play_pause_footer"
            app:layout_constraintStart_toEndOf="@id/btn_footer_player_prev"
            app:layout_constraintEnd_toStartOf="@id/btn_footer_player_next"
            app:layout_constraintTop_toTopOf="@id/btn_footer_player_prev"/>

    <ImageButton
            android:id="@+id/btn_footer_player_next"
            android:layout_width="@dimen/footer_action"
            android:layout_height="@dimen/footer_action"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/selector_footer_next"
            android:contentDescription="@string/next_track"
            app:layout_constraintStart_toEndOf="@id/btn_footer_player_play_pause"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_footer_player_prev"/>
</androidx.constraintlayout.widget.ConstraintLayout>