<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.musicplayer.MusicPlayerFragment">

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_player_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_36dp"
            android:clickable="true"
            android:focusable="true"
            android:elevation="@dimen/elevation"
            app:layout_constraintTop_toTopOf="@id/iv_player_track_source"
            app:layout_constraintBottom_toBottomOf="@id/iv_player_track_source"
            app:layout_constraintStart_toEndOf="@id/gd_player_start"/>

    <TextView
            android:id="@+id/tv_player_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now_playing"
            app:layout_constraintTop_toTopOf="@id/btn_player_back"
            app:layout_constraintBottom_toBottomOf="@id/btn_player_back"
            app:layout_constraintStart_toEndOf="@id/btn_player_back"
            app:layout_constraintEnd_toStartOf="@id/iv_player_track_source"
            style="@style/PlayerHeader"/>

    <ImageView
            android:id="@+id/iv_player_track_source"
            android:layout_width="@dimen/iv_player_track_source"
            android:layout_height="@dimen/iv_player_track_source"
            android:scaleType="fitCenter"
            android:elevation="@dimen/elevation"
            android:src="@drawable/selector_source"
            android:contentDescription="@string/track_cover"
            app:layout_constraintEnd_toStartOf="@id/gd_player_end"
            app:layout_constraintTop_toTopOf="@id/gd_player_top"/>

    <androidx.cardview.widget.CardView
            android:id="@+id/iv_player_track_cover_container"
            android:layout_width="@dimen/iv_player_track_cover"
            android:layout_height="@dimen/iv_player_track_cover"
            android:elevation="@dimen/elevation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_player_header"
            app:layout_constraintBottom_toTopOf="@id/tv_player_track_title"
            app:cardCornerRadius="@dimen/track_list_cover_corner_radius">

        <ImageView
                android:id="@+id/iv_player_track_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:contentDescription="@string/track_cover"/>
    </androidx.cardview.widget.CardView>

    <ToggleButton
            android:id="@+id/btn_player_track_fav"
            android:layout_width="@dimen/fav_button_player"
            android:layout_height="@dimen/fav_button_player"
            android:elevation="@dimen/elevation"
            android:background="@drawable/selector_fav"
            android:clickable="true"
            android:textOn=""
            android:textOff=""
            app:layout_constraintStart_toStartOf="@id/gd_player_start"
            app:layout_constraintTop_toTopOf="@id/tv_player_track_title"
            app:layout_constraintBottom_toBottomOf="@id/tv_player_track_author"/>

    <TextView
            android:id="@+id/tv_player_track_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/iv_player_track_cover_container"
            app:layout_constraintBottom_toTopOf="@id/tv_player_track_author"
            app:layout_constraintStart_toEndOf="@id/btn_player_track_fav"
            app:layout_constraintEnd_toStartOf="@id/iv_player_track_source"
            style="@style/PlayerTrackTitle"/>

    <TextView
            android:id="@+id/tv_player_track_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_player_track_title"
            app:layout_constraintBottom_toTopOf="@+id/sb_player"
            app:layout_constraintStart_toEndOf="@id/btn_player_back"
            app:layout_constraintEnd_toStartOf="@id/iv_player_track_source"
            style="@style/PlayerTrackTitle"/>

    <SeekBar
            android:id="@+id/sb_player"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:thumbTint="@color/colorOrange"
            app:layout_constraintTop_toBottomOf="@id/tv_player_track_author"
            app:layout_constraintBottom_toTopOf="@id/btn_player_play_pause"
            app:layout_constraintStart_toEndOf="@id/gd_player_start"
            app:layout_constraintEnd_toStartOf="@id/gd_player_end"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_player_track_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more_horiz_black_24dp"
            android:contentDescription="@string/more"
            app:layout_constraintEnd_toStartOf="@id/gd_player_end"
            app:layout_constraintTop_toTopOf="@id/tv_player_track_title"
            app:layout_constraintBottom_toBottomOf="@id/tv_player_track_author"/>

    <ImageButton
            android:id="@+id/btn_player_prev"
            android:layout_width="@dimen/player_action"
            android:layout_height="@dimen/player_action"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/selector_footer_prev"
            android:contentDescription="@string/prev_track"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginEnd="@dimen/btn_player_margin"
            app:layout_constraintStart_toEndOf="@id/gd_player_start"
            app:layout_constraintEnd_toStartOf="@id/btn_player_play_pause"
            app:layout_constraintTop_toTopOf="@id/btn_player_play_pause"
            app:layout_constraintBottom_toBottomOf="@id/btn_player_play_pause"/>

    <ToggleButton
            android:id="@+id/btn_player_play_pause"
            android:layout_width="@dimen/btn_player_play"
            android:layout_height="@dimen/btn_player_play"
            android:elevation="@dimen/elevation"
            android:textOn=""
            android:textOff=""
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/selector_play_pause_player"
            app:layout_constraintStart_toEndOf="@id/btn_player_prev"
            app:layout_constraintEnd_toStartOf="@id/btn_player_next"
            app:layout_constraintTop_toBottomOf="@id/sb_player"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
            android:id="@+id/btn_player_next"
            android:layout_width="@dimen/player_action"
            android:layout_height="@dimen/player_action"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/selector_footer_next"
            android:contentDescription="@string/prev_track"
            android:layout_marginStart="@dimen/btn_player_margin"
            app:layout_constraintStart_toEndOf="@id/btn_player_play_pause"
            app:layout_constraintTop_toTopOf="@id/btn_player_play_pause"
            app:layout_constraintBottom_toBottomOf="@id/btn_player_play_pause"
            app:layout_constraintEnd_toStartOf="@id/gd_player_end"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_player_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.03"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_player_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.97"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_player_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_player_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.97"/>

</androidx.constraintlayout.widget.ConstraintLayout>